Added icon font

--- a/src/html/header.html
+++ b/src/html/header.html
@@ -51,7 +51,7 @@
 	<div class="page-header__bottom-inner">
 	  <div class="page-header__bottom-wrap">
 	    <a href="#contact-block" class="page-header__link-contact">
-	      <img src="" alt="contact-link" class="page-header__link-contact-pic"></img>	
+	      <img src="img/icon_link--contact.png" alt="contact-link" class="page-header__link-contact-pic"></img>	
 	    </a>
 	  </div>
 	</div>
