--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -1,35 +1,37 @@
 <footer class="page-footer">
 	<div class="page-footer__inner">
-	  <div class="page-footer__wrap">
-	    <a href="" class="page-footer__logo-link">
-	      <img src="" alt="logo">
-	    </a>
-	  </div>
-	</div>
-	<div class="page-footer__nav-wrap">
-	  <nav class="footer-nav">
-		<ul class="footer-nav__list">
-		  <li class="footer-nav__li">
-		    <a href="" class="footer-nav__link">
-		      Bicycles
-		    </a>
-		  </li>
-		  <li class="footer-nav__li">
-		    <a href="" class="footer-nav__link">
-		      Parts
-		    </a>
-		  </li>
-		  <li class="footer-nav__li">
-		    <a href="" class="footer-nav__link">
-		      Accessories
-		    </a>
-		  </li>
-		  <li class="footer-nav__li">
-		    <a href="" class="footer-nav__link">
-		      Extras
-		    </a>
-		  </li>
-		</ul>
-	  </nav>
+
+	    <div class="page-footer__logo-wrap">
+	      <a href="" class="page-footer__logo-link">
+	        <img src="img/logo--black.png" alt="logo" class="page-footer__logi-img">
+	      </a>
+	    </div>
+	
+		<div class="page-footer__nav-wrap">
+		  <nav class="footer-nav">
+			<ul class="footer-nav__list">
+			  <li class="footer-nav__li">
+			    <a href="" class="footer-nav__link">
+			      Bicycles
+			    </a>
+			  </li>
+			  <li class="footer-nav__li">
+			    <a href="" class="footer-nav__link">
+			      Parts
+			    </a>
+			  </li>
+			  <li class="footer-nav__li">
+			    <a href="" class="footer-nav__link">
+			      Accessories
+			    </a>
+			  </li>
+			  <li class="footer-nav__li">
+			    <a href="" class="footer-nav__link">
+			      Extras
+			    </a>
+			  </li>
+			</ul>
+		  </nav>
+		</div>
 	</div>
 </footer>
