--- a/src/html/main.html
+++ b/src/html/main.html
@@ -1,71 +1,90 @@
 <main class="page-main">
   <div class="page-main__categories-inner">
-  	<div class="page-main__categories-wrap">
-
-	  <section class="page-main-categories">
-	  	<h2 class="page-main__categories-header">Categories</h2>
-	  	  <div class="page-main__categories-items-inner">
-	  			  <article class="categories-item">
-	  				<h4 class="categories-item__header"></h4>
-	  				<p class="categories-item__header"></p>
-	  			  </article>
-	  			  <aticle class="categories-item">
-	  				<h4 class="categories-item__header"></h4>
-	  				<p class="categories-item__header"></p>
-	  				<button class="categories-item__btn">Go to stop</button>
-	  			  </aticle>
-	  			  <aticle class="categories-item">
-	  				<h4 class="categories-item__header"></h4>
-	  				<p class="categories-item__header"></p>
-	  			  </aticle>
-	  	  </div>
+  	
+	  <section class="page-main__categories-wrap">
+  	    <h3 class="page-main__categories-header">Categories</h3>
+  	    <div class="page-main__categories-items-inner">
+		  <article class="categories-item categories-item--first categories-item__fixed">
+			<h1 class="categories-item__header">Fixed / single speed</h1>
+			<p class="categories-item__text">Are You ready for the 27.5 Revoluton?</p>
+		  </article>
+		  <aticle class="categories-item categories-item--second categories-item__premium">
+			<h1 class="categories-item__header">Premium series</h1>
+			<p class="categories-item__text">Exclusive Bike Components</p>
+			<button class="categories-item__btn">Go to stop</button>
+		  </aticle>
+		  <aticle class="categories-item categories-item--third categories-item__city">
+			<h1 class="categories-item__header">City bikes</h1>
+			<p class="categories-item__text">Street Playground</p>
+		  </aticle>
+  	    </div>
 	  </section>
 	  
-  	</div>
   </div>
+
   <div class="page-main__popular-inner">
   	<div class="page-main__popular-wrap">
 	  <section class="page-main-popular">
-	    <h2>Popular bikes</h2>
+	    <h3 class="page-main__popular-header">Popular bikes</h3>
 	
 	    <div class="page-main__popular-items-inner">
-		  <article class="popular-item">
-			<h1 class="popular-item__header">model</h1>
-			<span class="popular-item__cost">$249.00</span>
-			<form action="" class="popular-item__form">
-			  <select name="" id="" class="popular-item__select"></select>
-			  <button class="popular-item__btm"></button>
+		  <article class="popular-item popular-item--fixed">
+		  	<img src="img/popular_item-1.jpg" class="popular-item__img" alt="fixed gear image" width="100%">
+		  	<form action="" class="popular-item__form">
+			  <select name="" id="" class="popular-item__select">
+			  	<option>option</option>
+			  	<option>option</option>
+			  </select>
+			  <button class="popular-item__btm">Buy</button>
 			</form>
+			<h1 class="popular-item__header">Fixed gear</h1>
+			<span class="popular-item__cost">$249.00</span>
+			
 		  </article>
-		  <article class="popular-item">
-			<h1 class="popular-item__header">model</h1>
-			<span class="popular-item__cost">$249.00</span>
-			<form action="" class="popular-item__form">
-			  <select name="" id="" class="popular-item__select"></select>
-			  <button class="popular-item__btm"></button>
+		  <article class="popular-item popular-item--bigBoy">
+		  	<img src="img/popular_item-2.jpg" class="popular-item__img" alt="" width="100%">
+		  	<form action="" class="popular-item__form">
+			  <select name="" id="" class="popular-item__select">
+			  	<option>option</option>
+			  	<option>option</option>
+			  </select>
+			  <button class="popular-item__btm">Buy</button>
 			</form>
+			<h1 class="popular-item__header">Big booy ultra</h1>
+			<span class="popular-item__cost">$249.00</span>
+			
 		  </article>
-		  <article class="popular-item">
-			<h1 class="popular-item__header">model</h1>
-			<span class="popular-item__cost">$249.00</span>
-			<form action="" class="popular-item__form">
-			  <select name="" id="" class="popular-item__select"></select>
-			  <button class="popular-item__btm"></button>
+		  <article class="popular-item popular-item--sanchaez">
+		  	<img src="img/popular_item-3.jpg" class="popular-item__img" alt="" width="100%">
+		  	<form action="" class="popular-item__form">
+			  <select name="" id="" class="popular-item__select">
+			  	<option>option</option>
+			  	<option>option</option>
+			  </select>
+			  <button class="popular-item__btm">Buy</button>
 			</form>
+			<h1 class="popular-item__header">Sanchaez</h1>
+			<span class="popular-item__cost">$249.00</span>
 		  </article>
 	    </div>
 	  </section>
   	</div>
   </div>
   <div class="page-main__contact-inner">
-    <div id="contact-block" class="page-main__contact-wrap">
-    		<form action="" class="page-main__contact-form">
-    			<input type="text" class="page-main__contact-input page-main__contact-input--firstname">
-    			<input type="text" class="page-main__contact-input page-main__contact-input--surname">
-    			<input type="text" tyoe="email" class="page-main__contact-input--email">
-    			<textarea name="" id="" cols="30" rows="10" class="page-main__contact-textarea"></textarea>
-    			<button type="submit"></button>
-    		</form>
-    	</div>	
+
+    <section id="contact-block" class="page-main__contact-wrap">
+        <h3 class="page-main__contact-header">Contact us</h3>
+		<span class="page-main__contact-text">Please contact us for all inquiries and purchase options.</span>
+		<div class="page-main__form-inner">
+			<form action="" class="page-main__contact-form">
+				<input type="text" class="page-main__contact-input page-main__contact-input--firstname" placeholder="NAME">
+				<input type="text" class="page-main__contact-input page-main__contact-input--surname" placeholder="SURNAME"><br>
+				<input type="text" tyoe="email" class="page-main__contact-input page-main__contact-input--email" placeholder="USER@DOMAIN.COM"><br>
+				<textarea name="" id="" cols="30" rows="8" class="page-main__contact-input page-main__contact-textarea" placeholder="Message"></textarea><br>
+				<button type="submit" class="page-main__contact-btn">Send</button>
+			</form>
+		</div>
+    </section>
+
   </div>
 </main>
