--- a/src/html/main.html
+++ b/src/html/main.html
@@ -4,19 +4,25 @@
 	  <section class="page-main__categories-wrap">
   	    <h3 class="page-main__categories-header">Categories</h3>
   	    <div class="page-main__categories-items-inner">
-		  <article class="categories-item categories-item--first categories-item__fixed">
-			<h1 class="categories-item__header">Fixed / single speed</h1>
-			<p class="categories-item__text">Are You ready for the 27.5 Revoluton?</p>
-		  </article>
-		  <aticle class="categories-item categories-item--second categories-item__premium">
-			<h1 class="categories-item__header">Premium series</h1>
-			<p class="categories-item__text">Exclusive Bike Components</p>
-			<button class="categories-item__btn">Go to stop</button>
-		  </aticle>
-		  <aticle class="categories-item categories-item--third categories-item__city">
-			<h1 class="categories-item__header">City bikes</h1>
-			<p class="categories-item__text">Street Playground</p>
-		  </aticle>
+		  <div class="categories-item__first-wrap">
+		  	<article class="categories-item categories-item--first categories-item__fixed">
+		  				<h1 class="categories-item__header">Fixed / single speed</h1>
+		  				<p class="categories-item__text">Are You ready for the 27.5 Revoluton?</p>
+		  	</article>
+		  </div>
+		  <div class="categories-item__second-wrap">
+		  	<aticle class="categories-item categories-item--second categories-item__premium">
+  				<h1 class="categories-item__header">Premium series</h1>
+  				<p class="categories-item__text">Exclusive Bike Components</p>
+  				<button class="categories-item__btn">Go to stop</button>
+		  	</aticle>
+		  </div>
+		  <div class="categories-item__third-wrap">
+		  	<aticle class="categories-item categories-item--third categories-item__city">
+  				<h1 class="categories-item__header">City bikes</h1>
+  				<p class="categories-item__text">Street Playground</p>
+		  	</aticle>
+		  </div>
   	    </div>
 	  </section>
 	  
