Files js for header

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -6,11 +6,13 @@
 	<title>Bike Shop</title>
 	<link href="css/style.min.css" rel="stylesheet">
 </head>
-<body class="page-body">
+<body class="page-body" data-index-page>
   //= 'header.html'
   
   //= 'main.html'
 
   //= 'footer.html'
+
+  <script src="js/common.js"></script>
 </body>
 </html>
