Added basic scripts

--- a/src/html/header.html
+++ b/src/html/header.html
@@ -2,80 +2,83 @@
   <div class="page-header__top-inner">
     <div class="header-top__logo-wrap">
       <a id="logo-header" href="#" class="header-top__logo-link">
-        <img src="img/logo--white.png" alt="logo" class="header-top__logo-pic">	  
+        <img src="img/logo--white.png" alt="logo" class="header-top__logo-pic">
       </a>
     </div>
   <div class="header-top__nav-wrap">
-  	<nav id="site-nav" class="site-nav">
-	  <ul class="site-nav__list">
-	    <li class="site-nav__li" data-nav-li>
-	      <a href="" class="site-nav__link">
-	      	Bicycles
-	      </a>
-      	  <ul class="site-nav__sub-list">
-  		      <li class="site-nav__sub-li"><a href="" class="site-nav__sub-link">Fixed/Single speed</a></li>
-  		      <li class="site-nav__sub-li"><a href="" class="site-nav__sub-link">City bikes</a></li>
-  		      <li class="site-nav__sub-li"><a href="" class="site-nav__sub-link">Premium series</a></li>
-      	  </ul>
-	    </li>
-	    <li class="site-nav__li" data-nav-li>
-	      <a href="" class="site-nav__link">
-	      	Parts
-	      </a>
-      	  <ul class="site-nav__sub-list">
-  		      <li class="site-nav__sub-li"><a href="" class="site-nav__sub-link">item1</a></li>
-  		      <li class="site-nav__sub-li"><a href="" class="site-nav__sub-link">item2</a></li>
-  		      <li class="site-nav__sub-li"><a href="" class="site-nav__sub-link">item3</a></li>
-      	  </ul>
-	    </li>
-	    <li class="site-nav__li" data-nav-li>
-	      <a href="" class="site-nav__link" >
-	      	Accessories
-	      </a>
-	      <ul class="site-nav__sub-list">
-  		    <li class="site-nav__sub-li"><a href="" class="site-nav__sub-link">item1</a></li>
-  		    <li class="site-nav__sub-li"><a href="" class="site-nav__sub-link">item2</a></li>
-  		    <li class="site-nav__sub-li"><a href="" class="site-nav__sub-link">item3</a></li>
-      	  </ul>
-	    </li>
-	    <li class="site-nav__li" data-nav-li>
-	      <a href="" class="site-nav__link">
-	      	Extras
-	      </a>
-	      <ul class="site-nav__sub-list">
-  		    <li class="site-nav__sub-li"><a href="" class="site-nav__sub-link">item1</a></li>
-  		    <li class="site-nav__sub-li"><a href="" class="site-nav__sub-link">item2</a></li>
-  		    <li class="site-nav__sub-li"><a href="" class="site-nav__sub-link">item3</a></li>
-      	  </ul>
-	    </li>
-	    <li class="site-nav__li" data-nav-li>
-	      <a href="" class="site-nav__link  site-nav__link--basket">
-	        <i class="site-nav__icon-font"></i>	
-	      </a>
-	    </li>
+    <nav id="site-nav" class="site-nav">
+      <ul id="site-nav-list" class="site-nav__list site-nav__list--hidden-sm">
+        <li class="site-nav__li" data-nav-li>
+          <a href="" class="site-nav__link">
+          	Bicycles
+          </a>
+            <ul class="site-nav__sub-list">
+            <li class="site-nav__sub-li"><a href="" class="site-nav__sub-link">Fixed/Single speed</a></li>
+            <li class="site-nav__sub-li"><a href="" class="site-nav__sub-link">City bikes</a></li>
+            <li class="site-nav__sub-li"><a href="" class="site-nav__sub-link">Premium series</a></li>
+            </ul>
+        </li>
+        <li class="site-nav__li" data-nav-li>
+          <a href="" class="site-nav__link">
+            Parts
+          </a>
+            <ul class="site-nav__sub-list">
+            <li class="site-nav__sub-li"><a href="" class="site-nav__sub-link">item1</a></li>
+            <li class="site-nav__sub-li"><a href="" class="site-nav__sub-link">item2</a></li>
+            <li class="site-nav__sub-li"><a href="" class="site-nav__sub-link">item3</a></li>
+            </ul>
+        </li>
+        <li class="site-nav__li" data-nav-li>
+          <a href="" class="site-nav__link" >
+            Accessories
+          </a>
+          <ul class="site-nav__sub-list">
+          <li class="site-nav__sub-li"><a href="" class="site-nav__sub-link">item1</a></li>
+          <li class="site-nav__sub-li"><a href="" class="site-nav__sub-link">item2</a></li>
+          <li class="site-nav__sub-li"><a href="" class="site-nav__sub-link">item3</a></li>
+            </ul>
+        </li>
+        <li class="site-nav__li" data-nav-li>
+          <a href="" class="site-nav__link">
+            Extras
+          </a>
+          <ul class="site-nav__sub-list">
+          <li class="site-nav__sub-li"><a href="" class="site-nav__sub-link">item1</a></li>
+          <li class="site-nav__sub-li"><a href="" class="site-nav__sub-link">item2</a></li>
+          <li class="site-nav__sub-li"><a href="" class="site-nav__sub-link">item3</a></li>
+            </ul>
+        </li>
+        <li class="site-nav__li" data-nav-li>
+          <a href="" class="site-nav__link  site-nav__link--basket">
+            <i class="site-nav__icon-font"></i>	
+          </a>
+        </li>
       </ul>
-  	</nav>
+      <div id="site-nav-toggle" class="site-nav__toggle site-nav__toggle--hover-none" data-dropdown="false">
+        <a href="#" class="site-nav__link-toggle"></a>
+      </div>
+    </nav>
   </div>
   </div>
   <div class="page-header__slider-inner">
     <div class="slider-header__wrap">
-	  <div id="slider-header__content-1" class="slider-header__content">
-	    <h2 class="slider-header__header">Handmade bicycle</h2>
-	    <p class="slider-header__text">You <span class="slider-header__text--yellow">create</span> the <span class="slider-header__text--yellow">journey</span>, we suppy the <span class="slider-header__text--yellow">parts</span></p>
-	    <button class="slider-header__btn">Shop bikes</button>
-	  </div>
+    <div id="slider-header__content-1" class="slider-header__content">
+      <h2 class="slider-header__header">Handmade bicycle</h2>
+      <p class="slider-header__text">You <span class="slider-header__text--yellow">create</span> the <span class="slider-header__text--yellow">journey</span>, we suppy the <span class="slider-header__text--yellow">parts</span></p>
+      <button class="slider-header__btn">Shop bikes</button>
+    </div>
     <div id="slider-header__content-2" class="slider-header__content slider-header__content--hidden">
       <h2 class="slider-header__header">City bikes</h2>
-      <p class="slider-header__text">It's <span class="slider-header__text--yellow">doesn't</span> matter <span class="slider-header__text--yellow">what</span> I'm write <span class="slider-header__text--yellow">here</span></p>
+      <p class="slider-header__text">It's <span class="slider-header__text--yellow">doesn't</span> matter <span class="slider-header__text--yellow">what</span> I'm writing <span class="slider-header__text--yellow">here</span></p>
       <button class="slider-header__btn">Shop bikes</button>
     </div>
     <div id="slider-header__content-3" class="slider-header__content slider-header__content--hidden">
       <h2 class="slider-header__header">Premium series</h2>
-      <p class="slider-header__text">You <span class="slider-header__text--yellow">create</span> the <span class="slider-header__text--yellow">journey</span>, we suppy the <span class="slider-header__text--yellow">parts</span></p>
+      <p class="slider-header__text">If You <span class="slider-header__text--yellow">realy</span> read <span class="slider-header__text--yellow">this</span>, you mast buy <span class="slider-header__text--yellow">bicycle</span></p>
       <button class="slider-header__btn">Shop bikes</button>
     </div>
-	  <a href="#" class="slider-header__toggle slider-header__toggle--prev"></a>
-	  <a href="#" class="slider-header__toggle slider-header__toggle--next"></a>
+    <a href="#" class="slider-header__toggle slider-header__toggle--prev"></a>
+    <a href="#" class="slider-header__toggle slider-header__toggle--next"></a>
     </div>
   </div>
   <div class="page-header__bottom-inner">
