--- a/src/html/header.html
+++ b/src/html/header.html
@@ -9,47 +9,47 @@
     <nav id="site-nav" class="site-nav">
       <ul id="site-nav-list" class="site-nav__list site-nav__list--hidden-sm">
         <li class="site-nav__li" data-nav-li>
-          <a href="" class="site-nav__link">
+          <a href="#" class="site-nav__link">
           	Bicycles
           </a>
             <ul class="site-nav__sub-list">
-            <li class="site-nav__sub-li"><a href="" class="site-nav__sub-link">Fixed/Single speed</a></li>
-            <li class="site-nav__sub-li"><a href="" class="site-nav__sub-link">City bikes</a></li>
-            <li class="site-nav__sub-li"><a href="" class="site-nav__sub-link">Premium series</a></li>
+            <li class="site-nav__sub-li"><a href="#" class="site-nav__sub-link">Fixed/Single speed</a></li>
+            <li class="site-nav__sub-li"><a href="#" class="site-nav__sub-link">City bikes</a></li>
+            <li class="site-nav__sub-li"><a href="#" class="site-nav__sub-link">Premium series</a></li>
             </ul>
         </li>
         <li class="site-nav__li" data-nav-li>
-          <a href="" class="site-nav__link">
+          <a href="#" class="site-nav__link">
             Parts
           </a>
             <ul class="site-nav__sub-list">
-            <li class="site-nav__sub-li"><a href="" class="site-nav__sub-link">item1</a></li>
-            <li class="site-nav__sub-li"><a href="" class="site-nav__sub-link">item2</a></li>
-            <li class="site-nav__sub-li"><a href="" class="site-nav__sub-link">item3</a></li>
+            <li class="site-nav__sub-li"><a href="#" class="site-nav__sub-link">item1</a></li>
+            <li class="site-nav__sub-li"><a href="#" class="site-nav__sub-link">item2</a></li>
+            <li class="site-nav__sub-li"><a href="#" class="site-nav__sub-link">item3</a></li>
             </ul>
         </li>
         <li class="site-nav__li" data-nav-li>
-          <a href="" class="site-nav__link" >
+          <a href="#" class="site-nav__link" >
             Accessories
           </a>
           <ul class="site-nav__sub-list">
-          <li class="site-nav__sub-li"><a href="" class="site-nav__sub-link">item1</a></li>
-          <li class="site-nav__sub-li"><a href="" class="site-nav__sub-link">item2</a></li>
-          <li class="site-nav__sub-li"><a href="" class="site-nav__sub-link">item3</a></li>
+          <li class="site-nav__sub-li"><a href="#" class="site-nav__sub-link">item1</a></li>
+          <li class="site-nav__sub-li"><a href="#" class="site-nav__sub-link">item2</a></li>
+          <li class="site-nav__sub-li"><a href="#" class="site-nav__sub-link">item3</a></li>
             </ul>
         </li>
         <li class="site-nav__li" data-nav-li>
-          <a href="" class="site-nav__link">
+          <a href="#" class="site-nav__link">
             Extras
           </a>
           <ul class="site-nav__sub-list">
-          <li class="site-nav__sub-li"><a href="" class="site-nav__sub-link">item1</a></li>
-          <li class="site-nav__sub-li"><a href="" class="site-nav__sub-link">item2</a></li>
-          <li class="site-nav__sub-li"><a href="" class="site-nav__sub-link">item3</a></li>
+          <li class="site-nav__sub-li"><a href="#" class="site-nav__sub-link">item1</a></li>
+          <li class="site-nav__sub-li"><a href="#" class="site-nav__sub-link">item2</a></li>
+          <li class="site-nav__sub-li"><a href="#" class="site-nav__sub-link">item3</a></li>
             </ul>
         </li>
         <li class="site-nav__li" data-nav-li>
-          <a href="" class="site-nav__link  site-nav__link--basket">
+          <a href="#" class="site-nav__link  site-nav__link--basket">
             <i class="site-nav__icon-font"></i>	
           </a>
         </li>
