--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -2,7 +2,7 @@
   <div class="page-footer__inner">
 
     <div class="page-footer__logo-wrap">
-      <a id="logo-footer" href="" class="page-footer__logo-link">
+      <a id="logo-footer" href="#" class="page-footer__logo-link">
         <img src="img/logo--black.png" alt="logo" class="page-footer__logi-img">
       </a>
     </div>
@@ -11,22 +11,22 @@
       <nav class="footer-nav">
       <ul class="footer-nav__list">
         <li class="footer-nav__li">
-          <a href="" class="footer-nav__link">
+          <a href="#" class="footer-nav__link">
             Bicycles
           </a>
         </li>
         <li class="footer-nav__li">
-          <a href="" class="footer-nav__link">
+          <a href="#" class="footer-nav__link">
             Parts
           </a>
         </li>
         <li class="footer-nav__li">
-          <a href="" class="footer-nav__link">
+          <a href="#" class="footer-nav__link">
             Accessories
           </a>
         </li>
         <li class="footer-nav__li">
-          <a href="" class="footer-nav__link">
+          <a href="#" class="footer-nav__link">
             Extras
           </a>
         </li>
