--- a/src/html/main.html
+++ b/src/html/main.html
@@ -28,13 +28,13 @@
 
   <div class="page-main__popular-inner">
     <div class="page-main__popular-wrap">
-      <section class="page-main-popular">
+      <section id="section-popular" class="page-main-popular">
         <h3 class="page-main__popular-header">Popular bikes</h3>
         <div class="page-main__popular-items-inner">
           <div class="popular-item__wrap">
             <article class="popular-item popular-item--fixed" data-side="left" data-show="true">
               <img src="img/popular_item-1.jpg" class="popular-item__img" alt="fixed gear image">
-              <form action="post" class="popular-item__form">
+              <form action="/send" method="post" class="popular-item__form">
                 <select name="popular-select" class="popular-item__select">
                   <option>option</option>
                   <option>option</option>
@@ -48,7 +48,7 @@
           <div class="popular-item__wrap">
             <article class="popular-item popular-item popular-item--bigBoy" data-side="center" data-show="true">
               <img src="img/popular_item-2.jpg" class="popular-item__img" alt="bicycle  bigBoy">
-              <form action="post" class="popular-item__form">
+              <form action="/send" method="post" class="popular-item__form">
                 <select name="popular-select" class="popular-item__select">
                   <option>option</option>
                   <option>option</option>
@@ -62,7 +62,7 @@
           <div class="popular-item__wrap">
             <article class="popular-item popular-item popular-item--sanchaez" data-side="right" data-show="true">
               <img src="img/popular_item-3.jpg" class="popular-item__img" alt="bicycle sanchaez">
-              <form action="post" class="popular-item__form">
+              <form action="/send" method="post" class="popular-item__form">
                 <select name="popular-select" class="popular-item__select">
                   <option>option</option>
                   <option>option</option>
